--- a/src/components/ChessBoard.css
+++ b/src/components/ChessBoard.css
@@ -67,10 +67,25 @@
 }
 
 .piece {
-  font-size: 40px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   user-select: none;
   cursor: grab;
   transition: transform 0.2s;
+}
+
+.piece-image {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+  pointer-events: none;
+}
+
+.piece.white-piece {
+  /* font-weight: bold; */
 }
 
 .piece:hover {
